--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.10",
     "babel-register": "^6.26.0",
